--- a/src/css/media1120.css
+++ b/src/css/media1120.css
@@ -86,9 +86,9 @@ section {margin-bottom: 150px;}
         
         .galleryArea { 
           > h2 {margin: 0;} 
-          > ul {  width: 100%;  margin-bottom: 145px;  display: grid;  grid-template-columns: 1fr; grid-template-rows: 1fr,1fr,1fr;  grid-gap: 70px 2.78%;  text-align: center; 
-            > li { 
-              > h3 { margin-bottom: 48px; } 
+          > ul {  width: 100%;  margin-bottom: 145px;  display: flex; justify-content: center;  text-align: center; flex-wrap: wrap; gap: 50px;
+            > li { width: 100%; max-width: 600px;
+              > h3 { margin-bottom: 50px; } 
               > a { display: block;  width: 100%;  aspect-ratio: 525/325;  border-radius: 20px;  text-indent: -9999px; } 
               &:nth-child(1) > a { background: url(../../public/images/main/Photo_Section_01.png) no-repeat center / cover;  } 
             &:nth-child(2) > a { background: url(../../public/images/main/magazine.png.jpg) no-repeat center / cover; } 
@@ -112,8 +112,8 @@ section {margin-bottom: 150px;}
       }
       
       .eventArea { 
-        > ul { display: grid; grid-template-columns: 1fr; grid-auto-rows:1fr 1fr 1fr; gap: 60px; 
-          > li { border-radius: 20px; background-color: var(--color--blodGray); aspect-ratio: 1/1;  
+        > ul { display:flex; gap: 60px; justify-content: center; flex-wrap: wrap;
+          > li { border-radius: 20px; background-color: var(--color--blodGray); aspect-ratio: 1/1;  min-width: 400px; max-width: 600px;
             &:nth-of-type(1) > a { background: url(../../public/images/main/event_01.png) no-repeat center / contain; } 
             &:nth-of-type(2) > a { background: url(../../public/images/main/event_02.png) no-repeat center / contain; } 
             &:nth-of-type(3) > a { background: url(../../public/images/main/event_03.png) no-repeat center / contain; } 
@@ -130,7 +130,7 @@ section {margin-bottom: 150px;}
        h2::before { content: ""; display: block; width: 100%; height: 36px; margin-bottom: 50px; background: url(../../public/images/main/iufcYouth_img.png) no-repeat center / auto; } 
        > h2 { margin-bottom: 92px; } 
        > p { font-size: 16px; line-height: 30px; margin-bottom: 44px; padding-inline: 30px;} 
-       > a { font-size: 16px; max-width: 480px; line-height: 80px; border-radius: 15px;  display: block; position: relative; background-color: #4040408f; margin-inline: auto; margin-inline: 30px; } 
+       > a { font-size: 16px; max-width: 480px; line-height: 80px; border-radius: 15px;  display: block; position: relative; background-color: #4040408f; margin-inline: auto;} 
      }
      
      .sponsorArea { 
@@ -173,8 +173,8 @@ section {margin-bottom: 150px;}
      > img{  display:block; width:100%;}
      h3 { font-size: 34px; font-weight: 600;}
      > h3{ margin-bottom: 70px;}
-     > ol { display:flex; justify-content:space-between; width:100%; counter-reset: listNumber; flex-direction: column; gap: 30px;
-       > li{ width:100%; aspect-ratio:580/340; max-height: 320px; padding-top:35px; border-radius:20px; counter-increment: listNumber; background-color:var(--color--blodGray); display:flex; flex-direction:columns; align-items:flex-start; justify-content:center; flex-wrap:wrap; 
+     > ol { display:flex; align-items: center; justify-content:space-between; width:100%; counter-reset: listNumber; flex-direction: column; gap: 30px;
+       > li{ max-width: 600px; width: 100%; aspect-ratio:580/340; max-height: 320px; padding-top:35px; border-radius:20px; counter-increment: listNumber; background-color:var(--color--blodGray); display:flex; flex-direction:columns; align-items:flex-start; justify-content:center; flex-wrap:wrap; 
          > p { width:100%; font-size:18px; line-height:30px; text-align:center; padding-bottom:28px; border-bottom:solid 1px var(--color--gray);}
          > p::before{ content: '0'counter(listNumber); display: block;}
          > div{ display:flex; align-items:center; justify-content:center;
@@ -278,7 +278,7 @@ section {margin-bottom: 150px;}
           h3::before{content: '대표이사 인사말'; display: block; margin-bottom: 50px;}
         }
         > div {margin-bottom: 50px; display: flex; align-items: flex-start;width: 100%; flex-wrap: wrap;
-          > img { width: 100%;}
+          > img { width: 100%; max-width: 600px; display: block; margin-inline: auto;}
           > div {width: 100%;
             > span{font-size: 24px; margin-bottom: 33px; color: var(--color--blue); display: block; font-weight: 600;}
             p{
@@ -415,7 +415,7 @@ section {margin-bottom: 150px;}
           }
         }
         >  div {display: flex; position: absolute}
-        > .popup-OverLay { position: fixed;  top: 0;  left: 0; width: 100%; height: 100vh; background-color:rgba(0, 0, 0, 0.904); display: none; justify-content: center; align-items: center; z-index: 99;
+        > .popup-OverLay { position: fixed;  top: 0;  left: 0; width: 100%; height: 100vh; background-color:rgba(0, 0, 0, 0.904); display: none; justify-content: center; align-items: center; z-index: 9999;
           &.active{display: flex;}
           > .popup-Content { align-items: center; justify-content: center; height: 100vh; padding-top: 250px; width: 100vw; padding-inline: 30px; margin: 0 auto;  flex-wrap: wrap;  display: flex; background-color: var(--color--black); position: relative; overflow: scroll;
             > button {  top: 300px; right: 40px; aspect-ratio: 1/1; width: 40px; height: 40px; border: 1px solid var(--color--gray); border-radius: 100%; text-indent: -9999px; font-size: 0.1px; position: absolute; display: inline-block; background: url(../../public/images/player/m_→.png) no-repeat center / auto; cursor: pointer; }
@@ -595,21 +595,16 @@ section {margin-bottom: 150px;}
               }       
             }
             > div:nth-of-type(2){ 
-              width: 100%; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: space-around; align-items: center; font-size: 20px; font-weight: 600; margin-bottom: 30px;
-              > strong { text-align: center ; 
-                &:nth-of-type(1){order: 4;width:50%;
-                  &::after{content: ''; display: inline-block; width: 10px; height: 10px;margin-left: 15%;}
+              width: 100%; display: flex; gap: 3%; justify-content: center; align-items: center; font-size: 26px; font-weight: 600; margin-bottom: 50px;
+              > span { width: 40%; display: flex; align-items: center; justify-content: space-between; max-width: 260px; flex-direction: column; gap: 30px;
+                &:nth-of-type(1){
+                  > strong {order: 2;}
+                  > span {order: 1;}
                 }
-                &:nth-of-type(2){order: 5;width: 50%;
-                  &::before{content: ''; display: inline-block; width: 10px; height: 10px;margin-right: 15%;}
+                > span {
+                  width: 130px; height: 130px; display:flex; align-items: center; justify-content: center; background-color: var(--color--blodGray); border-radius: 100%;
                 }
               }
-              > span{ margin-bottom: 30px; flex-basis: 70px; height: 70px; padding: 5%; display: block; background-color: var(--color--blodGray); display: flex; align-items: center; justify-content: center; border-radius: 100%;
-                img{ object-fit: contain;}
-                &:nth-of-type(1){order: 1;}
-                &:nth-of-type(2){order: 3;}
-              }
-              > b {order: 2;  text-align: center; font-size: 20px;}
             }
             >div:nth-of-type(3) { display: flex; width: 100%; align-items: center; justify-content: center; gap: 20px; margin-bottom: 30px;
               > * {border: 1px solid var(--color--white); line-height: 25px; padding-inline: 15px; border-radius: 5px;}
@@ -668,15 +663,15 @@ section {margin-bottom: 150px;}
       /* gallaryArea */
       .gallaryArea{
         > ul{grid-template-columns: repeat(1fr); display: grid; gap: 30px; width: 100%;
-          > li {position: relative; cursor: pointer;
+          > li {position: relative; cursor: pointer; max-width: 600px; margin-inline: auto;
             > a {
-          &:hover{
-            > p{display: block;}
-          }
-          > img{ width: 100%; display: block;}
-          > p{display: none; position: absolute ;bottom: 0; left: 0; font-size: 14px; background-color: var(--color--blodGray); width: calc(100%); line-height: 40px;
-            > span{margin-left: 15px;}
-          }
+            &:hover{
+              > p{display: block;}
+            }
+            > img{ width: 100%; display: block;}
+            > p{display: none; position: absolute ;bottom: 0; left: 0; font-size: 14px; background-color: var(--color--blodGray); width: calc(100%); line-height: 40px;
+              > span{margin-left: 15px;}
+            }
         }
       }
     }
@@ -787,11 +782,11 @@ section {margin-bottom: 150px;}
     .ticketsTitleBox{ margin-bottom: 50px; text-align: center;
       > img{margin-bottom: 70px;}
       > p {font-size: 34px; font-weight: 600; margin-bottom: 40px;}
-  }
-  .ticktetsNoteBox{ border: 1px solid var(--color--gray) ; padding-bottom: 20px; margin-bottom: 40px;
-    > strong {display: inline-block; margin-bottom: 34px; font-size: 20px ; font-weight: 600; line-height: 40px; padding-inline: 10px; background-color: var(--color--gray);}
-    > p {font-size: 12px; line-height: 25px; padding-left: 30px; font-weight: 200;}
-  }
+    }
+    .ticktetsNoteBox{ border: 1px solid var(--color--gray) ; padding-bottom: 20px; margin-bottom: 40px;
+      > strong {display: inline-block; margin-bottom: 34px; font-size: 20px ; font-weight: 600; line-height: 40px; padding-inline: 10px; background-color: var(--color--gray);}
+      > p {font-size: 12px; line-height: 25px; padding-left: 30px; font-weight: 200;}
+    }
 
     /* buyTicket */
     .buyTicketsArea { max-width: 1080px; margin: 0 auto;
