--- a/src/css/global.css
+++ b/src/css/global.css
@@ -248,12 +248,13 @@
     
     .loginArea {
         > p {text-align: center; color: var(--color--gray);}
-        > form { max-width: 570px; width: 100%; margin: 0 auto; font-size: 18px; margin-bottom: 35px;
+        > form { max-width: 570px; width: 100%; margin: 0 auto; font-size: 18px; margin-bottom: 35px; position: relative;
             > * {width: 100%; display: block;}
             > input , button {border-radius: 10px;}
             > label {color: var(--color--gray);margin-bottom: 18px;}
             > input {background-color: #262626; width: calc(100% - 40px); margin-bottom: 50px; line-height: 64px; padding-inline: 20px; color: white; font-weight: 300;}
             > button {line-height: 64px; background-color: var(--color--blue);}
+            > p {text-align: center; color: red; position: absolute; bottom: 80px; font-size: 14px; }
         }
         > p:nth-of-type(2) { margin-bottom: 20px; font-weight: 200; font-size: 16px;
             > a {color: var(--color--blue); text-decoration: underline;text-underline-position: under; }
