--- a/src/css/page.css
+++ b/src/css/page.css
@@ -655,8 +655,7 @@
   /* cheeringGrounds */
   .cheeringGroundsArea{
     > .boardList + div{margin-bottom: 50px;}
-    > button {display: block; margin-left: auto;
-      > a {line-height: 65px; font-size: 18px; padding-inline: 70px; border: 1px solid var(--color--white); display: block; border-radius: 10px;}
+    > button {display: block; cursor: pointer; margin-left: auto; line-height: 65px; font-size: 18px; width: 200px; border: 1px solid var(--color--white); border-radius: 10px;
     }
   }
   
