--- a/src/css/components.css
+++ b/src/css/components.css
@@ -87,6 +87,7 @@
               .slide-container::-webkit-scrollbar-thumb{background-color:#8f8f8f ; border-radius: 5px; width: 50px;}
             }
             
+            
             /* feedSlide */
         .feedArea { padding-inline: 30px;
           > .tap-container { width: 100%; margin-bottom: 48px; display: flex; justify-content: flex-start; align-items: center; gap: 3%;  flex-wrap: wrap;
@@ -108,7 +109,21 @@
         }
     }
 }
-
+.mainPrevNextMatch{
+  > div:nth-of-type(1){ padding-block: 40px; 
+    > span { width: 40px; height: 40px; display: flex; justify-content: center; align-items: center; background-color: #ddebf1; border-radius: 100%; margin: 0  auto 15px; }
+    > p {font-size: 20px; margin-bottom: 20px;}
+    > small { font-size: 16px; display: flex; margin-bottom: 15px; align-items: center; justify-content: center;
+      &::before{content: url(../../public/images/matchCenter/map_icon.png);  margin-right: 5px;}            
+    }
+    > b {margin-bottom: 10px; line-height: 23px; font-size: 16px;  color: var(--color--gray); background-color: transparent; font-weight: 600; display: flex; text-align: center; justify-content: center;
+    }     
+  }
+  > div:nth-of-type(2){display: flex; align-items: center; justify-content: center; font-size: 35px; font-weight: 900; gap: 30px;
+    > span {display: flex; flex-direction: column; gap: 20px;
+    }
+  }
+}
 
 @media (width <= 1510px){
    /* leagueAndMatch */
@@ -613,6 +628,25 @@
     > section {height: 1000px; background-color: #161616; border-left: 1px solid #262626;}
   }
 
+}
+
+.post { 
+  > h2 {font-size: 34px; font-weight: 400; margin-bottom: 30px; }
+  .postCreatedAtViews {font-size: 14px; color: var(--color--gray); display: flex; gap: 23px; align-items: center; justify-content: flex-start;
+   }
+  > p {margin-bottom: 50px;
+    > span {color: white;}
+  }
+  > div {padding-block: 50px; border-top: 1px solid var(--color--gray) ; font-size: 18px; line-height: 25px; padding-inline: 40px;
+    > img{display: block; margin: 0 auto 50px; }
+  }
+  > ul{ border-block: 1px solid var(--color--gray);
+    > li { display: flex; line-height: 64px; align-items: center; padding-inline: 25px;
+      &:nth-of-type(1){border-bottom: 1px solid var(--color--gray);}
+      > span:nth-of-type(1){margin-right: 25px;}
+      > p {margin-left: auto;}
+    }
+  }
 }
 
 
