--- a/src/css/media1120.css
+++ b/src/css/media1120.css
@@ -548,7 +548,33 @@ section {margin-bottom: 150px;}
   }
 
   /* matchCenter */
-
+  .matchPrevNext{width: 100%;  display: flex; flex-direction: column; justify-content: center; align-items: center; border-bottom: 1px solid var(--color--gray);
+    > div:nth-of-type(1){ width: 100%; text-align: center;
+      > span {  margin-bottom: 20px; width: 40px; height: 40px; background-color: lightslategray; border-radius: 100%; display: inline-block; position: relative; margin-top: 35px;
+        > img {position: absolute; transform: translate(-50% , -50%); top: 50%;}
+      }
+      > p {font-size: 20px; margin-bottom: 20px;}
+      > small { font-size: 16px; display: block; margin-bottom: 35px; }
+      > mark {margin-bottom: 25px; line-height: 23px; font-size: 16px;  color: var(--color--gray); background-color: transparent; font-weight: 600; display: flex; text-align: center; justify-content: center;
+        &::before{content: url(../../public/images/matchCenter/map_icon.png); display: inline-block; margin-right: 5px;}            
+      }       
+    }
+    > div:nth-of-type(2){ 
+      width: 100%; display: flex; gap: 3%; justify-content: center; align-items: center; font-size: 26px; font-weight: 600; margin-bottom: 50px;
+      > span { width: 40%; display: flex; align-items: center; justify-content: space-between; max-width: 260px; flex-direction: column; gap: 30px;
+        &:nth-of-type(1){
+          > strong {order: 2;}
+          > span {order: 1;}
+        }
+        > span {
+          width: 130px; height: 130px; display:flex; align-items: center; justify-content: center; background-color: var(--color--blodGray); border-radius: 100%;
+        }
+      }
+    }
+    >div:nth-of-type(3) { display: flex; width: 100%; align-items: center; justify-content: center; gap: 20px; margin-bottom: 30px;
+      > * {border: 1px solid var(--color--white); line-height: 25px; padding-inline: 15px; border-radius: 5px;}
+    }
+  }
   .matchCenterPage{
 
       /* gameSchedule */
@@ -557,33 +583,6 @@ section {margin-bottom: 150px;}
         > p {text-align: center; border-block: 1px solid var(--color--gray); line-height: 60px; text-transform: uppercase;
         }
         > ol { width: 100%;
-          > li{width: 100%;  display: flex; flex-direction: column; justify-content: center; align-items: center; border-bottom: 1px solid var(--color--gray);
-            > div:nth-of-type(1){ width: 100%; text-align: center;
-              > span {  margin-bottom: 20px; width: 40px; height: 40px; background-color: lightslategray; border-radius: 100%; display: inline-block; position: relative; margin-top: 35px;
-                > img {position: absolute; transform: translate(-50% , -50%); top: 50%;}
-              }
-              > p {font-size: 20px; margin-bottom: 20px;}
-              > small { font-size: 16px; display: block; margin-bottom: 35px; }
-              > mark {margin-bottom: 25px; line-height: 23px; font-size: 16px;  color: var(--color--gray); background-color: transparent; font-weight: 600; display: flex; text-align: center; justify-content: center;
-                &::before{content: url(../../public/images/matchCenter/map_icon.png); display: inline-block; margin-right: 5px;}            
-              }       
-            }
-            > div:nth-of-type(2){ 
-              width: 100%; display: flex; gap: 3%; justify-content: center; align-items: center; font-size: 26px; font-weight: 600; margin-bottom: 50px;
-              > span { width: 40%; display: flex; align-items: center; justify-content: space-between; max-width: 260px; flex-direction: column; gap: 30px;
-                &:nth-of-type(1){
-                  > strong {order: 2;}
-                  > span {order: 1;}
-                }
-                > span {
-                  width: 130px; height: 130px; display:flex; align-items: center; justify-content: center; background-color: var(--color--blodGray); border-radius: 100%;
-                }
-              }
-            }
-            >div:nth-of-type(3) { display: flex; width: 100%; align-items: center; justify-content: center; gap: 20px; margin-bottom: 30px;
-              > * {border: 1px solid var(--color--white); line-height: 25px; padding-inline: 15px; border-radius: 5px;}
-            }
-          }
         }
       }
     }
