--- a/src/css/components.css
+++ b/src/css/components.css
@@ -607,14 +607,15 @@
 }
 
 /* 관리자페이지 레이아웃 */
-.managementTeamPage { 
-  > div:first-of-type{ display: flex; justify-content: space-between; padding-inline: 30px; align-items: center; border-bottom: 2px solid #262626; padding-block: 10px;
+.adminPage { 
+  .header { display: flex; justify-content: space-between; padding-inline: 30px; align-items: center; border-bottom: 2px solid #262626; padding-block: 10px;
     > a:nth-of-type(1){background:url(../../public/images/main/icon_인천.png) no-repeat center / auto; display: block; height: 90px; text-indent: -9999px; width: 100px;}
     > a:nth-of-type(2) {line-height: 40px; border: 2px solid var(--color--blue); padding-inline: 10px; border-radius: 10px;}}
-  > div:nth-of-type(2){ display: flex; 
+  .tabMenu { display: flex; 
     > aside {  font-size: 16px;
       > ul { cursor: pointer; width: 150px; text-indent: 30px;
         > li{line-height: 60px; height: 60px; overflow: hidden; border-bottom: 1px solid #262626;
+          > a.active{color:#0061c6}
           > ul {font-size: 14px; line-height: 40px;
           }
           &:hover{height: auto; color: var(--color--blue); font-size: 18px;
@@ -625,7 +626,7 @@
         }
       }
     }
-    > section {height: 1000px; background-color: #161616; border-left: 1px solid #262626;}
+    > .content {height: 1000px; border-left: 1px solid #262626;}
   }
 
 }
