백엔드서버 env  환경변수 설정

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -849,8 +849,7 @@
 }
 
 
-/* managementTeamPage */
-
+/* adminPage */
 .adminPage {
   > .loginArea { max-width: 580px;  margin-inline: auto; height: 100vh;
       h2 {margin-bottom: 30px; font-size: 34px; text-align: center; padding-top: calc((100vh - 432px) / 2);}
