--- a/src/css/media1120.css
+++ b/src/css/media1120.css
@@ -40,7 +40,7 @@ section {margin-bottom: 150px;}
       button{display: none;}
       .slide-list {overflow: hidden;}
       .slide-item{
-        > div {  margin-right: 20px; border-radius: 20px; box-sizing: border-box; display: flex; flex-direction: column; 
+        > a {  margin-right: 20px; border-radius: 20px; box-sizing: border-box; display: flex; flex-direction: column; 
           img { display: block; width: 100%;  margin-bottom: 26px; border-radius: 20px 20px 0 0; background-color: #161616; } 
           p { display: inline-block; width: 100%; font-size: 16px; line-height: 25px; max-width: 340px; font-weight: 400; overflow: hidden; 
                   > strong { margin-right: 5px; text-transform: capitalize; display: inline; color: #ffea00; } 
