--- a/src/css/components.css
+++ b/src/css/components.css
@@ -201,7 +201,7 @@
   100%{width: var(--ani--width);}
 }
 @media (width > 1120px){
-    .banner{ width:100%; height:950px; margin-bottom:150px; display:flex; align-items:flex-end; background-repeat: no-repeat; background-position: center; background-size: cover;
+    .banner{ width:100%; height:680px; margin-bottom:150px; display:flex; align-items:flex-end; background-repeat: no-repeat; background-position: bottom ; background-size: cover;
       & + div,&+section{margin-bottom: 150px;}
       > ul { width: 100%; font-size:18px; color:#666666; position:relative; display:flex; flex-grow:1; justify-content:flex-start; gap:3%;
         > li{ cursor:pointer; z-index:1; font-weight: 500;
@@ -229,7 +229,7 @@
   }
 }
 @media (width <= 1120px){
-    .banner{ width:100%; height:950px; margin-bottom:150px; display:flex; align-items:flex-end; background-repeat: no-repeat; background-position: center; background-size: cover;
+    .banner{ 
       & + div,&+section{margin-bottom: 150px;}
       > ul { width: 100%; font-size:18px; color:#666666; position:relative; display:flex; flex-grow:1; justify-content:flex-start; gap:3%;
         > li{ cursor:pointer; z-index:1; font-weight: 500;
