--- a/src/css/media1120.css
+++ b/src/css/media1120.css
@@ -452,9 +452,9 @@ section {margin-bottom: 150px;}
           }
       }
       .popup-Overlay{ left: 0; top: 0; position: fixed; width: 100vw; height: 100vh; overflow-y: scroll;  background-color:var(--color--black); color: var(--color--white); z-index: 9999;
-        > .popup-contents{ padding-inline: 30px;
+        > .popup-contents{ height: 100vh; padding-top: 250px; width: 100vw; margin: 0 auto; 
           > div:nth-of-type(1) { width: 100%; padding-top:100px; margin: 0 auto;  align-items: center; display: flex; color: var(--color--white);  position: relative; flex-wrap: wrap; 
-            > button {  top: 100px; right: 0; aspect-ratio: 1/1; width: 40px; height: 40px; border: 1px solid var(--color--gray); border-radius: 100%; text-indent: -9999px; font-size: 0.1px; position: absolute; display: inline-block; background: url(../../public/images/player/m_→.png) no-repeat center / auto; cursor: pointer; }
+            > button {  top: 100px; right: 30px; aspect-ratio: 1/1; width: 50px; height: 50px; border: 1px solid var(--color--gray); border-radius: 100%; text-indent: -9999px; font-size: 0.1px; position: absolute; display: inline-block; background: url(../../public/images/player/m_→.png) no-repeat center / auto; cursor: pointer; }
             > img {width: 100%; aspect-ratio: 314/355; max-width: 450px; max-height: 520px; display: block; margin: 0 auto;}
             > div { width: 100%;
               > p {display: flex; align-items: center; margin-bottom: 50px;
