--- a/src/css/page.css
+++ b/src/css/page.css
@@ -424,7 +424,6 @@
           
     /* ProArea */
     .proArea {
-      > h2 {font-size: 0.1px; text-indent: -9999px;}
       > div { width: 100%; gap: 50px ; margin-bottom: 150px; display: flex; justify-content: flex-start; align-items: center; 
         > button {font-size: 18px; cursor: pointer; font-weight: 400; 
           &.active {color: var(--color--blue);}
@@ -454,9 +453,9 @@
           }
       }
       .popup-Overlay{ left: 0; top: 0; position: fixed ; width: 100vw; height: 100vh; overflow-y: auto;  background-color:var(--color--black); color: var(--color--white); z-index: 9999;
-        > .popup-contents{
-          > div:nth-of-type(1) { width: 100%; padding-top:50px; margin: 0 auto; justify-content: space-evenly; align-items: center; display: flex; color: var(--color--white); margin-bottom: 50px; position: relative; 
-            > button {top: 100px; right: 10%; width: 65px; height: 65px; border: 1px solid var(--color--gray); border-radius: 100%; text-indent: -9999px; font-size: 0.1px; position: absolute; display: inline-block; background: url(../../public/images/player/closeBtn.png) no-repeat center / auto; cursor: pointer; }
+        > .popup-contents{ height: 100vh; padding-top: 250px; width: 100vw; padding-inline: 30px; margin: 0 auto;  
+          > div:nth-of-type(1) { width: 100%;  margin: 0 auto; justify-content: space-evenly; align-items: center; display: flex; color: var(--color--white); margin-bottom: 50px; position: relative; 
+            > button {top: 100px; right: 10px; width: 65px; height: 65px; border: 1px solid var(--color--gray); border-radius: 100%; text-indent: -9999px; font-size: 0.1px; position: absolute; display: inline-block; background: url(../../public/images/player/closeBtn.png) no-repeat center / auto; cursor: pointer; }
             > img {width: 33.3%; aspect-ratio: 314/355; min-width: 420px;}
             > div { width: 33.3%;
               > p {display: flex; align-items: center; margin-bottom: 50px;
@@ -867,7 +866,7 @@
       .title { text-indent: 30px; font-size: 28px; margin-block: 25px;
         > strong{color: var(--color--blue); font-size: 34px;}
       }
-      > div:nth-of-type(1){ border-bottom: 2px dashed white;
+      > div:nth-of-type(1){ border-bottom: 2px solid white;
           form { margin-bottom: 10px;
             > label { display: block; margin-bottom: 20px;}
             > input {text-indent: 10px; width: 30%; line-height: 30px; border-radius: 5px;  margin-bottom: 20px; margin-right: 20px; color:black; } 
