--- a/src/css/media1120.css
+++ b/src/css/media1120.css
@@ -10,7 +10,7 @@ section {margin-bottom: 150px;}
   /* blue market */
   .marketArea { color: var(--color--white); 
     h2 { text-align: center; } 
-    > a { max-width: 250px; font-size: 22px; line-height: 55px; padding-left: 40px; margin-inline: auto; margin-bottom: 70px; display: block; position: relative; box-sizing: border-box; border: 1px solid var(--color--white); border-radius: 30px; } 
+    > a { max-width: 250px; font-size: 14px; line-height: 55px; text-overflow: ellipsis; white-space: nowrap; padding-left: 40px; margin-inline: auto; margin-bottom: 70px; display: block; position: relative; box-sizing: border-box; border: 1px solid var(--color--white); border-radius: 30px; } 
     > ul { width: 100%; display: grid;  grid-template-columns: 1fr, 1fr; grid-template-rows: 380px ,210px ,210px; grid-template-areas: "item1 item1" "item2 item3" "item4 item5"; gap: 20px  20px;
         > li:hover { border: 5px solid var(--color--blue); } 
         > li { overflow: hidden; background-color: var(--color--blodGray); border: 5px solid var(--color--blodGray); border-radius: 30px; 
@@ -68,8 +68,8 @@ section {margin-bottom: 150px;}
         background: url(../../public/images/main/academy.BackGround_Img.png) no-repeat center / auto;  
         > div {  position: relative;  
           > h2 { line-height: 55px;  display: inline; margin: 0;}     
-          > p {  font-size: 16px;  font-weight: 200;  line-height: 30px;  top: 70px;  right: 0;    text-align: right;  color: var(--color--white); }   
-          > a {  font-size: 20px;  width:100%;  line-height: 78px;  text-indent: 80px;  display: block;  margin-left: auto;  position: relative;  box-sizing: border-box;  border-radius: 10px;  border: 1px solid var(--color--white);  
+          > p {  font-size: 14px;  font-weight: 200;  line-height: 30px;  top: 70px;  right: 0;    text-align: right;  color: var(--color--white); }   
+          > a {  font-size: 16px;  width:100%;  line-height: 78px;  text-indent: 80px;  display: block;  margin-left: auto;  position: relative;  box-sizing: border-box;  border-radius: 10px;  border: 1px solid var(--color--white);  
             &:hover { background-color: var(--color--blue);  border: 1px solid var(--color--blue); } 
             &:nth-of-type(1) { margin-top: 200px; margin-bottom: 25px;} 
           } 
@@ -95,13 +95,13 @@ section {margin-bottom: 150px;}
        h2::before { content: ""; display: block; width: 100%; height: 36px; margin-bottom: 50px; background: url(../../public/images/main/iufcYouth_img.png) no-repeat center / auto; } 
        > h2 { margin-bottom: 92px; } 
        > p { font-size: 16px; line-height: 30px; margin-bottom: 44px; padding-inline: 30px;} 
-       > a { font-size: 16px; max-width: 480px; line-height: 80px; border-radius: 15px;  display: block; position: relative; background-color: #4040408f; margin-inline: auto;} 
+       > a { text-overflow: ellipsis; white-space: nowrap; font-size: 16px; max-width: 480px; line-height: 80px; border-radius: 15px;  display: block; position: relative; background-color: #4040408f; margin-inline: auto;} 
      }
      
      .sponsorArea { 
        margin-block: 150px; color: var(--color--white); text-align: center; 
         > * { margin-inline: auto; } 
-        a { display: block; 
+        a { display: block; text-overflow: ellipsis; white-space: nowrap;
           &:nth-of-type(1) { max-width: 175px; border: 1px solid var(--color--white); padding-inline: 44px; padding-block: 17px; border-radius: 100px; font-size: 18px; font-weight: 500; box-sizing: border-box; margin-bottom: 48px; } 
           &:not(:nth-of-type(1)) { box-sizing: border-box; border: 1px solid var(--color--white); max-width: 480px; line-height: 67px; border-radius: 10px; font-size: 25px;} 
           &:nth-of-type(2) { margin-bottom: 25px; } 
