--- a/src/css/components.css
+++ b/src/css/components.css
@@ -625,7 +625,7 @@
 }
 
 .post { 
-  > h2 {font-size: 34px; font-weight: 400; margin-bottom: 30px; }
+  > h2 {font-size: 34px; font-weight: 400; margin-bottom: 30px; margin-top: 50px}
   .postCreatedAtViews {font-size: 14px; color: var(--color--gray); display: flex; gap: 23px; align-items: center; justify-content: flex-start;
    }
   > p {margin-bottom: 50px;
