--- a/src/css/media1120.css
+++ b/src/css/media1120.css
@@ -897,4 +897,24 @@ section {margin-bottom: 150px;}
       }
     }
   }
+  /* .loginArea {
+    > p {text-align: center; color: var(--color--gray);}
+    > form { max-width: 570px; width: 100%; margin: 0 auto; font-size: 18px; margin-bottom: 35px; position: relative;
+        > * {width: 100%; display: block;}
+        > input , button {border-radius: 10px;}
+        > label {color: var(--color--gray);margin-bottom: 18px;}
+        > input {background-color: #262626; width: calc(100% - 40px); margin-bottom: 50px; line-height: 64px; padding-inline: 20px; color: white; font-weight: 300;}
+        > div{ display: flex;  height: 50px; fe
+             button:nth-of-type(1) { background-color: var(--color--blue); width: 100%; }
+            .kakaoLogin { background : url(../../public/images/Login/kakao_login_medium_narrow.png) no-repeat center / auto ; margin: 0 auto; text-indent: -9999px; }           
+        }
+        > p {text-align: center; color: red; position: absolute; bottom: 80px; font-size: 14px; }
+    }
+    > p:nth-of-type(2) { margin-bottom: 20px; font-weight: 200; font-size: 16px;
+        > a {color: var(--color--blue); text-decoration: underline;text-underline-position: under; }
+    }
+    > p:nth-of-type(3) {display: flex; align-items: center; justify-content: center; gap: 40px;
+        > a:hover{color: var(--color--white);}
+    }
+} */
 }
