--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -107,3 +107,15 @@ body{ color: var(--color--white);}
   section { margin-bottom: 150px;}
 }
 
+/* API 응답 로딩중  */
+
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid;
+  border-color: #000 #0000;
+  animation: l1 1s infinite;
+}
+@keyframes l1 {to{transform: rotate(.5turn)}}
+
